--- a/website/newsletter/227/index.mdx
+++ b/website/newsletter/227/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /227
-title: "This Week In React #227: ..."
+title: "This Week In React #227: Next.js, tRPC, React Query, React Router, StyledComponents, MUI, Base UI, Next Intl | React Native birthday, Lynx, EAS, Atlas, Reanimated, Audio, BottomTabs | CSS, Rsdoctor, Linters, Node"
 authors: [slorber]
 date: 03-26-2025
 unlisted: true
@@ -9,8 +9,6 @@ unlisted: true
 Hi everyone!
 
 <Todo />
-
-- 🗓 [React-Summit](https://reactsummit.com/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇳🇱 Amsterdam - 13 & 17 June. Creators of React Query (Tanner Linsley), Expo Router (Evan Bacon), Million.js (Aiden Bai) & more will share knowledge at React Summit! Use promo code TWIR for 10% off tickets.
 
 <!-- truncate -->
 
@@ -65,6 +63,7 @@ This security event has caused a lot of drama in the ecosystem, which I'd rather
 - 👀 [Next.js PR \- `useLinkStatus()`](https://github.com/vercel/next.js/pull/77300): New hook to provide pending feedback during navigation transitions.
 - 👀 [Next.js PR \- Link `onNavigate` prop](https://github.com/vercel/next.js/pull/77209)
 - 📣 [Styled Components \- Thank you](https://opencollective.com/styled-components/updates/thank-you): The popular old-gen CSS-in-JS library is now in maintenance mode and not recommended for new projects.
+- 🗓 [React-Summit](https://reactsummit.com/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇳🇱 Amsterdam - 13 & 17 June. Creators of React Query (Tanner Linsley), Expo Router (Evan Bacon), Million.js (Aiden Bai) & more will share knowledge at React Summit! Use promo code TWIR for 10% off tickets.
 - 📜 [Experimenting with React View Transitions](https://frontendatscale.com/issues/43): Explains what View Transitions are and how React’s experimental `<ViewComponent>` API integrates this web feature. React starts view transitions automatically when using concurrent features, applies transition names automatically at the right time, and exposes convenient lifecycle props.
 - 📜 [Components Are Just Sparkling Hooks](https://www.bbss.dev/posts/sparkling-hooks/): Shows how a component can be transformed into a hook, how the 2 are related, and introduces the concept of hook-based headless components as a flexible primitive.
 - 📜 [Writing static websites with Vite and React](https://blog.carlosn.com.br/post/writing-static-websites-with-vite-and-react/): Carlos created a Vite plugin to implement a simple React-based static site generator, using React only as a server-side templating system.
@@ -82,8 +81,6 @@ This security event has caused a lot of drama in the ecosystem, which I'd rather
 - 📦 [Next Intl 4.0 \- Type-safe locales, ICU arguments, format and more](https://next-intl.dev/blog/next-intl-4-0)
 - 📦 [Merge Refs 2.0 \- Merges React refs into one](https://github.com/wojtekmaj/merge-refs)
 - 📦 [React-Admin 5.5 & 5.6 \- March 2025 Update](https://marmelab.com/blog/2025/03/24/react-admin-march-2025-update.html)
-- 📦 [Parcel React Server Components Examples \- Deno and Bun](https://github.com/parcel-bundler/rsc-examples)
-- 📦 [Unlocking Meteor 3.2: New Profiling Tool to Track Bundler Performance and Size](https://blog.meteor.com/unlocking-meteor-3-2-new-profiling-tool-to-track-bundler-performance-and-size-f1f223ffa49d)
 - 📦 [Ionic 8.5 \- React 19 support](https://ionic.io/blog/announcing-ionic-8-5)
 - 🎥 [React Paris 2025 Playlist](https://www.youtube.com/watch?v=-W3_dxNDHVw&list=PL53Z0yyYnpWitP8Zv01TSEQmKLvuRh_Dj)
 
@@ -153,8 +150,10 @@ To the next promising decade\! 🥂
 
 ## 🤭 Fun {#fun}
 
-<Todo />
+This week we have 2 videos, you need to click 😂
 
-[![alt](/emails/issues/215/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/227/meme.jpg)](https://x.com/sebastienlorber/status/1904152606181658966)
+
+[![alt](/emails/issues/227/meme2.jpg)](https://x.com/flexbox_/status/1903547233032712635)
 
 See ya! 👋
