--- a/website/newsletter/227/index.mdx
+++ b/website/newsletter/227/index.mdx
@@ -8,7 +8,9 @@ unlisted: true
 
 Hi everyone!
 
-<Todo />
+This week, you probably didn't miss the Next.js middleware drama, but that wasn't the only thing going on! We also got many great releases such as tRPC, React Query, Rsdoctor and more!
+
+Also, React Native is 10 years old today! 🥳
 
 <!-- truncate -->
 
