--- a/website/newsletter/227/index.mdx
+++ b/website/newsletter/227/index.mdx
@@ -84,7 +84,7 @@ This security event has caused a lot of drama in the ecosystem, which I'd rather
 - 📦 [Merge Refs 2.0 \- Merges React refs into one](https://github.com/wojtekmaj/merge-refs)
 - 📦 [React-Admin 5.5 & 5.6 \- March 2025 Update](https://marmelab.com/blog/2025/03/24/react-admin-march-2025-update.html)
 - 📦 [Ionic 8.5 \- React 19 support](https://ionic.io/blog/announcing-ionic-8-5)
-- 🎥 [React Paris 2025 Playlist](https://www.youtube.com/watch?v=-W3_dxNDHVw&list=PL53Z0yyYnpWitP8Zv01TSEQmKLvuRh_Dj)
+- 🎥 [React Paris 2025 Playlist](https://www.youtube.com/watch?v=-W3_dxNDHVw&list=PL53Z0yyYnpWitP8Zv01TSEQmKLvuRh_Dj): I was at the conf last Friday, great talks already available online, and it was nice to meet some of you there 👋!
 
 <SubscribeFormEmbed placement="middle" />
 
