--- a/website/newsletter/227/index.mdx
+++ b/website/newsletter/227/index.mdx
@@ -3,12 +3,13 @@ slug: /227
 title: "This Week In React #227: Next.js, tRPC, React Query, React Router, StyledComponents, MUI, Base UI, Next Intl | React Native birthday, Lynx, EAS, Atlas, Reanimated, Audio, BottomTabs | CSS, Rsdoctor, Linters, Node"
 authors: [slorber]
 date: 03-26-2025
-unlisted: true
 ---
 
 Hi everyone!
 
-This week, you probably didn't miss the Next.js middleware drama, but that wasn't the only thing going on! We also got many great releases such as tRPC, React Query, Rsdoctor and more!
+This week, you probably didn't miss the Next.js middleware drama, but that wasn't the only thing going on!
+
+We also got many great releases such as tRPC, React Query, Rsdoctor and more!
 
 Also, React Native is 10 years old today! 🥳
 
