--- a/website/newsletter/228/index.mdx
+++ b/website/newsletter/228/index.mdx
@@ -53,7 +53,6 @@ React 19.1 has been released this week, the most notable changes are:
 
 - 💸 [Strapi - Open-source headless Content Management, now with generous PaaS hosting, fully managed yet flexible and customizable. ](https://strapi.link/twir)
 - 💸 [VS Code extension: Get React component usage insights in VS Code](https://omlet.dev/?utm_campaign=partner_this-week-in-react_newsletter-quick-link-mar-2025)
-- 🐦 [Tailwind CSS v4.1 is coming next week](https://x.com/adamwathan/status/1905670109441446391)
 - 📜 [Is CSS-in-JS still a thing?](https://fullystacked.net/css-in-js-still-a-thing/) It’s not trendy anymore (at least not without a compiler to avoid the performance penalty) but it’s still widely used.
 - 📜 [Next.js Deployment Challenges: Why platforms need better open source collaboration](https://www.netlify.com/blog/how-we-run-nextjs/): Netlify explains why Next.js is complicated to deploy outside of Vercel (no adapter support, missing documentation, lack of visibility…) and what they would like to change.
 - 📜 [Adaptive Video Streaming With Dash.js In React](https://www.smashingmagazine.com/2025/03/adaptive-video-streaming-dashjs-react/): You probably won’t be building something like this every day, but it turns out adaptive streaming is not that complicated thanks to the DASH standard
@@ -61,7 +60,7 @@ React 19.1 has been released this week, the most notable changes are:
 - 📜 [Keeping Costs in Check When Hosting Next.js on Vercel](https://www.thisdot.co/blog/keeping-costs-in-check-when-hosting-next-js-on-vercel)
 - 📜 [React Architecture Tradeoffs: SPA, SSR, or RSC](https://reacttraining.com/blog/react-architecture-spa-ssr-rsc)
 - 📜 [Understanding SPAs and their shortcomings](https://reacttraining.com/blog/problems-you-face-with-spas)
-- 📦 [React Email 4.0](https://resend.com/blog/react-email-4) adds useful tools (a linter, spam score, a compatibility checker) and a few components
+- 📦 [React Email 4.0](https://resend.com/blog/react-email-4): adds useful tools (a linter, spam score, a compatibility checker) and a few components
 - 📦 [Triplex beta](https://triplex.dev/blog/triplex-for-vscode): A VS Code extension to develop React apps visually. It was initially built for React Three Fiber but now supports any React component
 - 📦 [Rspack 1.3](https://rspack.dev/blog/announcing-1-3): can be used to build React Router v7 apps
 - 📦 [Tinybase 6.0](https://github.com/tinyplex/tinybase/releases/tag/v6.0.0): compatible with React 19
@@ -125,8 +124,6 @@ It’s been a quiet week in the React Native community—perhaps because all eye
 
 ## 🤭 Fun {#fun}
 
-<Todo />
-
-[![alt](/emails/issues/215/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/228/next_burn.jpg)](https://x.com/aidenybai/status/1904294570533572817)
 
 See ya! 👋
