--- a/website/newsletter/228/index.mdx
+++ b/website/newsletter/228/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /228
-title: "This Week In React #228: React 19.1, Tailwind CSS 4.1, NextJS Costs and Deployments, i18n-check, Rspack, React Admin | RN 0.79, RN Executorch, Xcode 16.3 | Typescript, TC39, Webkit, Intl.Collator, Vitest 3.1 "
+title: "This Week In React #228: React 19.1, NextJS Costs and Deployments, i18n-check, Rspack, React-Admin | RN 0.79, RN Executorch, Xcode 16.3 | TypeScript, TC39, WebKit, Intl.Collator, Vitest 3.1"
 authors: [matthieugicquel, cyrilbo]
 date: 04-02-2025
 unlisted: true
@@ -11,8 +11,6 @@ Hey everyone!
 Cyril and Matthieu here from Theodo Apps 👋 with your weekly dose of React and React Native updates!
 
 React 19.1 just dropped with better error handling and deeper integration for Server Components in Parcel. Meanwhile, Tailwind CSS 4.1 is right around the corner, and the community is buzzing with hot takes on CSS-in-JS. On the React Native side, the golden RC for 0.79 is out, and ExecuTorch v0.4.0 is landing soon with exciting AI features.
-
-Check our partner 🗓️ [App.js Conf](https://appjs.co/?utm_source=thisweekinreact) - 🇵🇱 Kraków - 28-30 May. We're thrilled to announce the first speakers for App.js Conf 2025: Charlie Cheever, Enzo Manuel Mangano & Delphine Bugner! Grab your ticket now with a 15% discount using the code "TWIR".
 
 Let’s get into it! 🚀
 
@@ -98,6 +96,7 @@ It’s been a quiet week in the React Native community—perhaps because all eye
 - 🐦 [React Native ExecuTorch 0.4 is announced for end of May](https://x.com/swmansion/status/1907086132828934414): with Universal LLM Runner, Additional LLMs support, Embedding models, Multilingual Whisper, OCR, Image segmentation…
 - 👀 [React Native 0.79 Golden RC](https://github.com/facebook/react-native/releases/tag/v0.79.0-rc.4): We should have a stable release next week.
 - 👀 [Lynx is exploring solutions for native plugin development](https://github.com/lynx-family/lynx/discussions/1#discussioncomment-12660488)
+- 🗓️ [App.js Conf](https://appjs.co/?utm_source=thisweekinreact) - 🇵🇱 Kraków - 28-30 May. We're thrilled to announce the first speakers for App.js Conf 2025: Charlie Cheever, Enzo Manuel Mangano & Delphine Bugner! Grab your ticket now with a 15% discount using the code "TWIR".
 - 📜 [SDK 52 patches for Xcode 16.3](https://expo.dev/changelog/xcode-16-3-patches): If you encountered build issues when upgrading to Xcode 16.3, you may have to install the latest SDK 52 patch and RN0.77. Or move back to Xcode 16.2 🫠
 - 📜 [React Native: 10 years](https://shift.infinite.red/react-native-10-years-db9eb36c5af6)
 - 📦 [React Native MacOS 0.78](https://github.com/microsoft/react-native-macos/releases/tag/v0.78.0)
