--- a/website/newsletter/228/index.mdx
+++ b/website/newsletter/228/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /228
-title: "This Week In React #228: React 19.1, Next.js deployment, React-Email, Triplex, Tinybase, Rspack, i18n-check, React-Admin | 0.79 Golden RC, ExecuTorch, Unistyles, Xcode 16.3, macOS | TypeScript, TC39, WebKit, Intl.Collator, Vitest 3.1"
+title: "This Week In React #228: React 19.1, Next.js deployment, React-Email, Triplex, Tinybase, Rspack, i18n-check, React-Admin | 0.79 Golden RC, ExecuTorch, Unistyles, Xcode 16.3, macOS, Screens, Gesture Handler | TypeScript, TC39, WebKit, Intl.Collator, Vitest 3.1"
 authors: [matthieugicquel, cyrilbo]
 date: 04-02-2025
 ---
