--- a/website/newsletter/228/index.mdx
+++ b/website/newsletter/228/index.mdx
@@ -7,7 +7,7 @@ date: 04-02-2025
 
 Hey everyone!
 
-Cyril and Matthieu here from Theodo Apps 👋 with your weekly dose of React and React Native updates!
+Cyril and Matthieu here from Theodo Apps 👋 with your weekly dose of React and React Native updates, while Seb is busy enjoying the React Native Connection conf!
 
 React 19.1 just dropped with better error handling and deeper integration for Server Components in Parcel. Meanwhile, Tailwind CSS 4.1 is right around the corner, and the community is buzzing with hot takes on CSS-in-JS. On the React Native side, the golden RC for 0.79 is out, and ExecuTorch v0.4.0 is landing soon with exciting AI features.
 
