--- a/website/src/pages/curator.mdx
+++ b/website/src/pages/curator.mdx
@@ -105,7 +105,7 @@ Once we decide on a date, you become the planned author of this newsletter, and 
 
 The sourcing process is quite predictable:
 
-- Scroll the last 7 days on this [X chronological timeline](https://x.com/search?q=list%3A1462723878950690817%20%2Bmin_retweets%3A10%20%2Bfilter%3Alinks%20-%22gpt%22%20-%22web3%22%20-%22crypto%22%20-%22bitcoin%22%20-%22midjourney%22%20-%22ukraine%22%20-%22gpt4%22%20-%22chatgpt%22%20-%22gpt3%22%20-%22ai%22&src=typed_query&f=live)
+- Scroll the last 7 days on this [X chronological timeline](https://slo.im/x/feed) (bookmark the redirect `https://slo.im/x/feed`)
 - Get access to my 500+ RSS feeds to monitor
 
 You can also find interesting things your own way, organically or predictably, and help me refine this process over time. If you find interesting sources that we don’t track yet, we need to start tracking them.
