--- a/website/newsletter/229/index.mdx
+++ b/website/newsletter/229/index.mdx
@@ -51,19 +51,19 @@ So next time your PM asks for a new dashboard, skip the existential crisis. [Jus
 
 **[AppZung: the enterprise-ready CodePush alternative](https://appzung.com/?utm_source=newsletter&utm_medium=email&utm_campaign=this_week_in_react_250409)**
 
-    With Microsoft AppCenter shutdown, choose the reliable and robust alternative that doesn't compromise on security, privacy or performance.
-    
-    AppZung CodePush delivers:
-    
-    ✅ Seamless transition: One-command migration from AppCenter
-    ✅ Enterprise-grade security: Code signing, SAML SSO, IP allowlisting and more
-    ✅ Performance at scale: High-availability architecture with fast global CDN
-    ✅ Privacy-first approach: EU-based infrastructure with built-in GDPR compliance features
-    ✅ Dedicated support: Priority handling and satisfied customers
-    
-    Our platform is built by developers managing high-traffic applications who understand what's at stake when pushing critical updates.
-    
-    [Start deploying](https://appzung.com/?utm_source=newsletter&utm_medium=email&utm_campaign=this_week_in_react_250409)  with AppZung today!
+With Microsoft AppCenter shutdown, choose the reliable and robust alternative that doesn't compromise on security, privacy or performance.
+
+AppZung CodePush delivers:
+
+- ✅ Seamless transition: One-command migration from AppCenter
+- ✅ Enterprise-grade security: Code signing, SAML SSO, IP allowlisting and more
+- ✅ Performance at scale: High-availability architecture with fast global CDN
+- ✅ Privacy-first approach: EU-based infrastructure with built-in GDPR compliance features
+- ✅ Dedicated support: Priority handling and satisfied customers
+
+Our platform is built by developers managing high-traffic applications who understand what's at stake when pushing critical updates.
+
+[Start deploying](https://appzung.com/?utm_source=newsletter&utm_medium=email&utm_campaign=this_week_in_react_250409) with AppZung today!
 
 ---
 
