--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/authors.yml
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/authors.yml
@@ -33,3 +33,21 @@ cyrilbo:
   page: true
   socials:
     x: BonacciniCyril
+
+kacperkapusciak:
+  name: Kacper Kapuściak
+  title: Software Engineer at Software Mansion
+  url: https://x.com/kacperkapusciak
+  image_url: https://github.com/kacperkapusciak.png
+  page: true
+  socials:
+    x: kacperkapusciak
+
+tomekzaw:
+  name: Tomasz Zawadzki
+  title: Software Engineer at Software Mansion
+  url: https://x.com/tomekzaw_
+  image_url: https://github.com/tomekzaw.png
+  page: true
+  socials:
+    x: tomekzaw_
