--- a/website/newsletter/229/index.mdx
+++ b/website/newsletter/229/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: /229
 title: "This Week In React #229: ..."
-authors: [slorber]
+authors: [kacperkapusciak, tomekzaw]
 date: 04-09-2025
 unlisted: true
 ---
