--- a/website/newsletter/229/index.mdx
+++ b/website/newsletter/229/index.mdx
@@ -8,7 +8,9 @@ unlisted: true
 
 Hi everyone!
 
-<Todo />
+This time it’s Tomasz and Kacper from [Software Mansion](https://swmansion.com/?utm_source=thisweekinreact) – you may already know us from libraries like Reanimated or Gesture Handler. We're happy to be among the authors of the This Week in React newsletter!
+
+We were about to call it a fairly calm week… until React Native 0.79 dropped and React Conf 2025 was officially announced.
 
 <!-- truncate -->
 
